# core

./: .gitignore  README.md  main.py  pyproject.toml
api/: errors.py
api/controllers/: products_controller.py
api/dtos/: product_dto.py  search_response_dto.py
application/dtos/: product_query.py
application/use_cases/: list_products.py  search_products.py
boot/: app.py
config/: .env  logger.py  vars.py
domain/entities/: product.py
domain/repositories/: product_repository.py
infrastructure/auth/: keycloak_client.py
infrastructure/database/: postgres.py
infrastructure/repositories/: postgres_product_repository.py
